Добавляет валидацию мин цены и сихр времени заезда и выезда

--- a/index.html
+++ b/index.html
@@ -108,9 +108,8 @@
         </fieldset>
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="price">Цена за ночь, руб.</label>
-          <input id="price" name="price" type="number" placeholder="5000" required max="100000"
-            data-pristine-required-message="Напишите цену за ночь"
-            data-pristine-max-message="Максимальная стоимость 100 000">
+          <input id="price" name="price" type="number" placeholder="5000" required
+            data-pristine-required-message="Напишите цену за ночь">
           <div class="ad-form__slider"></div>
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--time">
